# WebDeck

./: README.md
backend/: Makefile  pyproject.toml
backend/api/: app.py
backend/common/: settings.py
